# serializer version: 1
# name: test_entities[climate.testserial123-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'low',
        'medium',
        'high',
        'auto',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      'max_temp': 26.0,
      'min_temp': 18.0,
      'swing_modes': list([
        'off',
        'horizontal',
        'vertical',
        'both',
      ]),
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.testserial123',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'fujitsu_fglair',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': None,
    'unique_id': 'testserial123',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.testserial123-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 22.0,
      'fan_mode': 'auto',
      'fan_modes': list([
        'low',
        'medium',
        'high',
        'auto',
      ]),
      'friendly_name': 'testserial123',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      'max_temp': 26.0,
      'min_temp': 18.0,
      'supported_features': <ClimateEntityFeature: 425>,
      'swing_mode': 'both',
      'swing_modes': list([
        'off',
        'horizontal',
        'vertical',
        'both',
      ]),
      'target_temp_step': 0.5,
      'temperature': 21.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.testserial123',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_entities[climate.testserial345-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'low',
        'medium',
        'high',
        'auto',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      'max_temp': 26.0,
      'min_temp': 18.0,
      'swing_modes': list([
        'off',
        'horizontal',
        'vertical',
        'both',
      ]),
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.testserial345',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'fujitsu_fglair',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': None,
    'unique_id': 'testserial345',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.testserial345-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 22.0,
      'fan_mode': 'auto',
      'fan_modes': list([
        'low',
        'medium',
        'high',
        'auto',
      ]),
      'friendly_name': 'testserial345',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      'max_temp': 26.0,
      'min_temp': 18.0,
      'supported_features': <ClimateEntityFeature: 425>,
      'swing_mode': 'both',
      'swing_modes': list([
        'off',
        'horizontal',
        'vertical',
        'both',
      ]),
      'target_temp_step': 0.5,
      'temperature': 21.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.testserial345',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
